src-tauri/build_errors.txt
    Checking winoptimizerrevamp v0.1.0 (F:\WinOpt\WinOptimizerRevamp\src-tauri)
error[E0382]: borrow of moved value: `child`
    --> src\apps.rs:48:18
     |
  38 |     let mut child = Command::new(program)
     |         --------- move occurs because `child` has type `tokio::process::Child`, which does not implement the `Copy` trait
...
  46 |     let output = timeout(time_limit, child.wait_with_output())
     |                                            ------------------ `child` moved due to this method call
  47 |         .await
  48 |         .map_err(|_| {
     |                  ^^^ value borrowed here after move
  49 |             let _ = child.start_kill();
     |                     ----- borrow occurs due to use in closure
     |
note: `tokio::process::Child::wait_with_output` takes ownership of the receiver `self`, which moves `child`
    --> C:\Users\User\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.49.0\src\process\mod.rs:1446:39
     |
1446 |     pub async fn wait_with_output(mut self) -> io::Result<Output> {
     |                                       ^^^^

error[E0382]: borrow of moved value: `child`
    --> src\security.rs:83:22
     |
  64 |         let mut child = Command::new("powershell")
     |             --------- move occurs because `child` has type `tokio::process::Child`, which does not implement the `Copy` trait
...
  81 |         let result = timeout(ELEVATION_TIMEOUT, child.wait_with_output())
     |                                                       ------------------ `child` moved due to this method call
  82 |             .await
  83 |             .map_err(|_| {
     |                      ^^^ value borrowed here after move
  84 |                 let _ = child.start_kill();
     |                         ----- borrow occurs due to use in closure
     |
note: `tokio::process::Child::wait_with_output` takes ownership of the receiver `self`, which moves `child`
    --> C:\Users\User\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.49.0\src\process\mod.rs:1446:39
     |
1446 |     pub async fn wait_with_output(mut self) -> io::Result<Output> {
     |                                       ^^^^

error[E0382]: borrow of moved value: `child`
    --> src\tweaks.rs:60:18
     |
  44 |     let mut child = Command::new("powershell")
     |         --------- move occurs because `child` has type `tokio::process::Child`, which does not implement the `Copy` trait
...
  58 |     let output = timeout(TWEAK_TIMEOUT, child.wait_with_output())
     |                                               ------------------ `child` moved due to this method call
  59 |         .await
  60 |         .map_err(|_| {
     |                  ^^^ value borrowed here after move
  61 |             // Timeout fired  kill the hanging process
  62 |             let _ = child.start_kill();
     |                     ----- borrow occurs due to use in closure
     |
note: `tokio::process::Child::wait_with_output` takes ownership of the receiver `self`, which moves `child`
    --> C:\Users\User\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.49.0\src\process\mod.rs:1446:39
     |
1446 |     pub async fn wait_with_output(mut self) -> io::Result<Output> {
     |                                       ^^^^

warning: unused import: `std::os::windows::process::CommandExt`
  --> src\apps.rs:36:9
   |
36 |     use std::os::windows::process::CommandExt;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0382`.
warning: `winoptimizerrevamp` (lib) generated 1 warning
error: could not compile `winoptimizerrevamp` (lib) due to 3 previous errors; 1 warning emitted
